[fix: #210] Add variable for letter spacing

--- a/_globals.scss
+++ b/_globals.scss
@@ -29,6 +29,9 @@
 $font-size:           16 !default;
 $font-size-secondary: 18 !default;
 
+// Tracking
+$letter-spacing: 0.05em !default;
+
 // Font families
 $font-primary:   "Helvetica", "Arial", sans-serif !default;
 $font-secondary: "Helvetica", "Arial", sans-serif !default;
